# bot_pkg1

./: CMakeLists.txt  package.xml
launch/: spawn_bot.launch.py
meshes/: base_link.STL  left_wheel1.STL  left_wheel2.STL  left_wheel3.STL  right_wheel1.STL  right_wheel2.STL  right_wheel3.STL
urdf/: bot.urdf
